fjerning av fnutter utenfor kode

--- a/Ressursarkiv/index.html
+++ b/Ressursarkiv/index.html
@@ -21,7 +21,7 @@
         <span onclick="openTab(event, 'Sanity')">Sanity</span>
     </nav>
 
-    <section id="content"></section>¨
+    <section id="content"></section>
     
 </body>
 </html>
